--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,13 @@
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
     height: 100vh;
+    background-color: #eeeeee;
 }
