--- a/src/components/users/users.module.css
+++ b/src/components/users/users.module.css
@@ -5,10 +5,12 @@ ul {
     flex-direction: column;
     gap: 1rem;
     list-style: none;
-    
 }
 
 li {
+    display: flex;
+    justify-content: space-between;
+
     background-color: #6e0ff2;
     color: #eeeeee;
     border-radius: 1rem;
@@ -16,5 +18,9 @@ li {
 }
 
 .deleteButton {
+    font-size: 1.6rem;
+    padding: 0px 8px;
+    background-color: transparent;
+    border: none;
     cursor: pointer;
 }
